# space_invaders

./: CMakeLists.txt  makefile  menu  rel
images/: AKAv1  AKAv2  AKAv3  AKAv4  GMAa1  GMAa2  GMAa3  GMAa4  border  choice  gameover  lio-invaders  mode  newhighscore  pause  title  vaisseau
inc/: enemy.h  game.h  gameplay.h  globals.h  gui.h  image.h  input.h  player.h  projectile.h  star.h  vessel.h
others/: bestscore  helps
sh/: menuSon.sh  stopSong.sh
src/: enemy.c  game.c  gameplay.c  global.c  gui.c  image.c  input.c  main.c  player.c  projectile.c  star.c  vessel.c
